feat: use jlink to reduce jdk size